--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ margin-left: 2%;
 
 
 
+
     .navbar-brand {
         font-size:50px;
         margin-right: 5%;
@@ -94,8 +95,10 @@ margin-left: 2%;
     height: 204px;margin-right: 20px ;
     }
     .card-text{
-      font-size: 75%;
+      font-size: 80%;
+      font-family: 'Yeseva One', cursive;
     }
     .card{
-      margin-bottom: 10%;
+      margin-right: 3%;
+      margin-bottom: 3%;
     }
