--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ margin-left: 2%;
         font-family: 'Updock', cursive;
       font-weight: 800;
       color: black;
-      font-size: 200%;
+      font-size: 250%;
     }
     .topwords{
       text-align: center;
@@ -94,8 +94,32 @@ margin-left: 2%;
     height: 204px;margin-right: 20px ;
     }
     .card-text{
-      font-size: 75%;
+      font-size: 95%;
+      font-family: 'Yeseva One', cursive;
     }
     .card{
       margin-bottom: 10%;
+    }
+    .footer{
+      padding: 60px;
+      background-color:#f400a1;
+      color: #ffb3d9;
+      width: 100%;
+      margin-top: 100px;
+      font-size: 8px;
+      bottom: 0px;
+    }
+    .movierating {
+      background-color: #ffb3d9;
+      font-family: 'Yeseva One', cursive;
+      height: 300px;
+      overflow: scroll;
+      margin-top: 10px;
+    }
+    .characterratings {
+      background-color: #ffb3d9;
+      font-family: 'Yeseva One', cursive;
+      height: 300px;
+      overflow: scroll;
+      margin-top: 10px;
     }
