--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ margin-left: 2%;
       width: 100%;
       margin-top: 100px;
       font-size: 8px;
-      bottom: 0px;
+      bottom: 0%;
     }
     .movierating {
       background-color: #ffb3d9;
